# woundcomputeGUI

./: .gitignore  CITATION.cff  LICENSE  README.md  install.bat  install.sh  pyproject.toml  run.bat  run.sh  run_wound_compute_gui.py
src/woundcomputegui/: data_management.py  main_gui.py  wc_functions.py  wellplate_gui.py
